--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -427,6 +427,8 @@ Error message and password prompt
 
 <li>Flashcards à faire</li>
 
+<li>formulations</li>
+
 <li>Franc-Maçonnerie</li>
 
 <li>get rid of YOUTUBE addiction</li>
@@ -453,7 +455,7 @@ Error message and password prompt
 
 <li>ideas</li>
 
-<li>idées jeu société</li>
+<li>ideas jeux / idées jeu société</li>
 
 <li>Influence &amp; manipulation</li>
 
@@ -10065,8 +10067,8 @@ Home
 <div created="20220124175419175" modified="20220131132630771" title="$:/state/folded/Home">
 <pre>show</pre>
 </div>
-<div created="20220706102937557" modified="20220706102937557" title="$:/state/folded/idées jeu société">
-<pre>hide</pre>
+<div created="20220706102937557" modified="20220719101710781" title="$:/state/folded/idées jeu société">
+<pre>show</pre>
 </div>
 <div created="20190109093959757" modified="20190109094005946" title="$:/state/folded/leboncoin">
 <pre>show</pre>
@@ -10110,7 +10112,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220718071413152" list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw" modified="20220718071413152" title="$:/StoryList">
+<div created="20220720100935316" list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220720101105540" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10179,8 +10181,8 @@ Home
 <div created="20210313142548541" modified="20220531145637269" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220717164119665" title="$:/temp/search">
-<pre>prénoms</pre>
+<div created="20190114084246125" modified="20220719101658041" title="$:/temp/search">
+<pre>jeux</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -12764,8 +12766,8 @@ L’homme de masse, ainsi produit, doit être traité comme ce qu’il est : un 
 Extrait de l’obsolescence de l’homme, de Gunther Anders
 1956</pre>
 </div>
-<div created="20190529145654742" modified="20201201130021705" tags="jeux" title="Fallout 1.5">
-<pre>Fallout 1.5
+<div created="20190529145654742" modified="20220720101129499" tags="jeux" title="Fallout 1.5">
+<pre>! Fallout 1.5
 * http://resurrection.cz/en/
 * http://fallout-generation.com/forums/topic/21163-fallout-15-resurrection-parlons-en/
 * https://www.canardpc.com/351/fallout-15-resurrection-bac-sable-mouvant-fallout-2
@@ -12886,6 +12888,10 @@ find  /path/to/somewhere/ -name filename
 * exotérique/mésotérique/ésotérique
 * POO : aggrégation / composition
 * REST : url-param, query-param, body-param</pre>
+</div>
+<div created="20220718091325034" modified="20220718091355551" tags="" title="formulations">
+<pre>* À disposition si vous avez d’autres questions.
+* J'ai pris connaissance du sujet / pour prendre connaissance du sujet</pre>
 </div>
 <div created="20190410151906138" modified="20201201130641425" tags="complo" title="Franc-Maçonnerie">
 <pre>- Maurice Caillet : Ancien franc-maçon Français 19° de grand Orient : 
@@ -13951,7 +13957,7 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 ** en titane
 * quand il va trop vite, est-ce qu'un schizophrène ?</pre>
 </div>
-<div created="20220610153021952" modified="20220706102928435" tags="improve jeux" title="idées jeu société">
+<div created="20220610153021952" modified="20220719105659987" tags="improve jeux" title="ideas jeux / idées jeu société">
 <pre>! jeu à plateau, positionnement (inspi : AGoT melee, jeu de quidditch de Oz)
 ! pve ET pvp (inspi : Shadowrun Crossfire, Munchkin, Horreur à Arkham &amp; autre jce coop, ...)
 * les joueurs affrontent des &quot;monstres&quot;, mais se tirent la bourre
@@ -13993,6 +13999,18 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 ** ?? télékinésie / force push/pull / DK grapple / lévitation / sauts + hauts
 ** ?? téléportation / blink /
 
+! ''energy generation''
+* mana ~wow (stock pouvant être regen relativement difficilement : innervate, evocation, gemme/potion...)
+* energy rogue ~wow (regen continue infaillible)
+* rage ~wow = f(dégâts subis)
+* puissance runique wow DK : gagne 10pr pour chaque rune dépensée
+* = f(dégâts infligés ?)
+* ''cooldown''
+** pool de tokens avec un cap max &amp; une regen fixe par unité de temps (tour, round...)
+** activer une capa coûte N tokens
+** on ne peut puiser dans le pool que s'il est full
+* runes ~wow DK : 3 jauges de cooldowns
+
 ! jeu à identité secrète: 
 * le perso donne une polarité imposée pour 1 carac (genre élémentalisme:froid) : le joueur ne peut pas bluffer sur cette carac
 * les autres caracs sont laissées libres au bluff
@@ -14010,6 +14028,30 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 	* il perd la moitié de ses tokens ?
 	* il perd 1 seul token ?
 * des sorts peuvent ajouter/ôter des tokens d'action (~= ralentir/accélérer)
+
+! gameplay
+* pouvoir ''miser 2^^n^^ dés'', n au choix (ou fibonacci)
+** puis ''pouvoir récupérer les succès en surplus ''mais avec un risque de perdre qqchose (voire mm passer en échec)
+* inspi gameplay
+** tutorat (stark)
+** incli (lanni)
+** récursion (targ, martell, magic noir)
+** contre (martell, magic bleu)
+** choke (greyjoy)
+** burn (targ)
+** jump (targ)
+** revanche (martell)
+* inspi mots-clefs agot :
+** renom
+** ''loyal'' : retourne sur le deck
+** infâme : peut accumuler le pouvoir
+** vindicatif : se detap après LOSS en def
+** vigilent : se detap apres WIN en attaque
+** ''ambush'' : peut ''jumper'' depuis la main
+** ''intimidant'' : les persos de FOR&lt; ne comptent pas leur FOR
+** furtivité : peut ignorer un défenseur désigné
+** tueur : claim 1 mort participant après victoire
+** joute : si seul, ne peut être opposé que par 1 défenseur
 
 ! idées en vrac
 * ~àla gloomhaven : éléments (/mana) à 3 niveaux (fort/faible/zéro, proche/loin/zéro, ...)
@@ -14131,7 +14173,25 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 * World of Warcraft
 * Wanted / Bang!
 * Complots
-* ...</pre>
+* ...
+
+! Agot keywords
+* Deadly - During a challenge, if the attacking player controls the most participating characters with the “Deadly” keyword, the defending player must choose and kill a defending participating character after the challenge resolves.
+* Deathbound - Cards with the “Deathbound” keyword are placed in the dead pile whenever they would otherwise be placed in the discard pile from play. Event cards with the Deathbound keyword are placed in the dead pile only after they are successfully played from their owner’s hand. If the effects of an event with the “Deathbound” keyword are canceled, that event is placed in its owner’s discard pile.
+* Immunity - Some cards have an Immunity keyword, such as “Immune to character abilities,” “Immune to triggered effects,” or “Immune to events.” A card with immunity ignores the effects of card types to which it is immune. Additionally, a card cannot be chosen as the target of any effect to which it is immune.
+* Limited - You may play only one card (of any type) with the “Limited” keyword per round. Note that some cards have a “Limited Response:” action, which is not the same thing as the Limited keyword. As noted on the cards, each player cannot trigger more than one “Limited Response:” per round.
+* No Attachments - A card with the text “No Attachments” may not have any attachments on it at any time. Note that duplicates, however, may be played on unique cards with the text “No Attachments,” since duplicates are not considered to be attachments.
+* Renown - If you win a challenge (either as attacker or defender), each of your participating characters with the “Renown” keyword claims 1 power after the challenge resolves.
+* Stealth - For each of your attacking characters with the “Stealth” keyword, you may choose, before defenders are declared, a character without Stealth on the defending side. That character may not defend during this challenge.
+* Setup - Cards with the “Setup” keyword may be played during step 5 of the Game Setup.
+* Ambush (Targ) - You may put a card with the “Ambush” keyword into play from your hand as an “Any Phase:” action, by paying its printed gold cost with inﬂuence.
+* Infamy (Lannister) - When you claim power, or move power to your House, you may place it on any card with the “Infamy” keyword, instead of placing it on your House. Power on a card with “Infamy” does count towards your victory total, regardless of the card’s type.
+* Intimidate (Greyjoy) - While a character with the “Intimidate” keyword is attacking, characters with a lower STR than that character do not count their STR for that challenge.
+* Stalwart (Stark) - When a card with the “Stalwart” keyword is killed or discarded from play, it is placed on the top of its owner’s deck instead of being placed in the dead or discard pile.
+* Vengeful (Martell) - After you lose a challenge as the defender, you may stand any number of cards with the “Vengeful” keyword that you control.
+* Vigilant (Baratheon) - After you win a challenge as the attacker, you may stand any number of cards with the “Vigilant” keyword that you control.
+* Joust – If a character with the Joust keyword is attacking alone, the defending player may declare only one character to defend the challenge.
+* Melee – While participating in a challenge, a character with the Melee keyword gets +1 STR for each character participating on the opposing side of a challenge. </pre>
 </div>
 <div created="20210609154906945" modified="20210609155257736" tags="communication fiche_lecture" title="Influence &amp; manipulation">
 <pre>* Pied dans la bouche
@@ -16372,7 +16432,7 @@ Others
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20220718071452246" tags="core" title="pw">
+<div created="20190130144059269" modified="20220718090756855" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16513,6 +16573,7 @@ blablacar.fr =&gt; saleya 222
 1_r + formation.xooit.f =&gt; Osef hypnomachie.osef.osef@xn 222 (! non protégé, en clair server !)
 cantine https://portail.berger-levrault.fr/MairieSaintMarsDeCoutais44680/accueil =&gt; l.j@gm.c BBle****e06*****6
 nitroflare.sle@xn322
+petitbambou sa.leàausyfr+p722
 ```
 
 
