--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10112,7 +10112,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220720100935316" list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220720101105540" title="$:/StoryList">
+<div list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10181,8 +10181,8 @@ Home
 <div created="20210313142548541" modified="20220531145637269" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220719101658041" title="$:/temp/search">
-<pre>jeux</pre>
+<div created="20190114084246125" modified="20220726091913636" title="$:/temp/search">
+<pre>idées</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10374,15 +10374,17 @@ Dans les années 1893-1895, Freud et Breuer travaillent sur l'hystérie et sur s
 
 L'autre voie est celle de l'expression et de la représentation du souvenir pathogène par le langage. Freud a toujours soutenu que l'homme trouve un substitut à l'acte dans le langage. Le souvenir toxique peut être intégré et décrit par le sujet dans une série associative qui permettra la remise en place de l'événement traumatique au sein du système symbolique du langage, ce qui confère au sujet la capacité de regarder &quot;en face&quot; son trauma en le verbalisant et en le comprenant. Parler de son traumatisme, le cerner avec toujours plus de précision, c'est l'amener à la représentation, c'est alléger le souvenir de sa charge émotionnelle négative. Lorsqu'il travaillait à l'aide de l'hypnose, Freud pensait que l'abréaction se produisait par &quot;usure&quot; de l'affect au cours des associations libres de l'individu. Cependant, l'hypnose produisant des associations par suggestion, Freud a renoncé à son emploi au profit de la cure analytique, qui mobilise le sujet et favorise l'expression d'associations &quot;libres&quot; mettant en évidence les mécanismes de défense et de refoulement. Freud comprit progressivement que l'événement traumatique l'était, non seulement du point de vue du corps victime d'une réalité toxique, mais toujours en même temps du point de vue du système de représentation imaginaire/symbolique du sujet. Je suis traumatisé dans mon corps induit immanquablement que je suis traumatisé dans ma vision du monde ; mon imaginaire et mon découpage du monde en sont inévitablement marqués et ébranlés. Aussi ne s'agira-t-il plus, pour Freud, de tenter d'expulser l'affect par une abréaction physiologique &quot;ex corpus, ex machina&quot;, ou par les vertus artificielles de l'hypnose, en se plaçant dans les deux cas dans une vision &quot;énergétique&quot; du trauma, mais de provoquer l'abréaction par la prise de conscience du sujet, son expression et sa représentation, ce qui favorise la remise en place et la réappropriation d'un univers imaginaire/ symbolique par l'individu. Où l'on comprend que l'individu traumatisé lutte non seulement contre son affect, mais aussi contre tous les refoulements, les jugements moraux et les représentations s'y rapportant. L'abréaction adaptée est donc celle qui permet à l'individu de reprendre pleinement sa place au sein d'une représentation imaginaire/symbolique intégrée et assumée. </pre>
 </div>
-<div created="20220511075554161" modified="20220516083854068" tags="" title="achats amazon / leclerc / leboncoin">
-<pre>* sirop indus
+<div created="20220511075554161" modified="20220726091902566" tags="" title="achats amazon / leclerc / leboncoin">
+<pre>* siphon de douche
+* pommeau de douche
+* sirop indus
 * post-its
 * multiprise cuisine
 * adapter VGA/?
 ** https://www.amazon.fr/Syncwire-Adaptateur-HDMI-vers-VGA/dp/B07B2T5DV9/ref=sr_1_11
 ** https://www.amazon.fr/Adaptateur-ordinateur-projecteur-Chromebook-Raspberry/dp/B09HQZD1D8/ref=sr_1_33
 * cache-prises bébé
-* cloche à micro-ondes
+* ~~cloche à micro-ondes~~
 * clés à molette
 * perceuse
 * four
@@ -13007,7 +13009,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * Individual Computer Players won't hire heroes is they already have six or more.
 * Computer Players as a whole will not hire Heroes if they have 20 or more among them. </pre>
 </div>
-<div created="20190108105358377" modified="20220523104459763" tags="core" title="Home">
+<div created="20190108105358377" modified="20220801145902098" tags="core" title="Home">
 <pre>* [[pw]]
 * ''dez Tugan 7 mai 2020'' https://mail.yahoo.com/d/search/keyword=Tugan/messages/17172
 * ''DIF'' / CPF / 
@@ -13017,12 +13019,13 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * [[dev responsable &amp; job hunt]]
 
 ! Daily / Weekly
+* n2f : https://www.n2f.com/app/#/Reports/
 * ''https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net'' 7/19
 * https://mail.yahoo.com l.d@y 6+20
 * https://facebook.com/messages l.d@y7+17
 * https://monespace.ausy.fr sa.le@au.f322 (mois doublé)
 * https://www.facebook.com/troisieme.type
-* ''https://www.amazon.fr/s?k=lego&amp;i=warehouse-deals''
+* https://www.amazon.fr/s?k=lego&amp;i=warehouse-deals / ''[[+search+|https://www.amazon.fr/s?k=lego&amp;i=toys&amp;bbn=3581943031&amp;s=price-asc-rank]]''
 * https://www.lego.com/fr-fr/categories/sales-and-deals
 * presti daortiz ideas ''https://www.facebook.com/hashtag/ideanotebook?__gid__=283203773743670''
 * presti blog: the mind oracle	https://themindoracle.blogspot.com/
@@ -16432,7 +16435,7 @@ Others
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20220718090756855" tags="core" title="pw">
+<div created="20190130144059269" modified="20220727162438013" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16459,7 +16462,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 ouicse.com =&gt; sa.le@ausy.fr 121
 AUSY mail.google.com sa.le@ausy.fr ausy4/21
 intra.ausy.fr =&gt; 11/17 || 1/20 || 3/21 double
-webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 322 (mois doublé)
+webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 722
 cseausy.fr sa.le@ausyfr C521 double
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -16574,6 +16577,7 @@ blablacar.fr =&gt; saleya 222
 cantine https://portail.berger-levrault.fr/MairieSaintMarsDeCoutais44680/accueil =&gt; l.j@gm.c BBle****e06*****6
 nitroflare.sle@xn322
 petitbambou sa.leàausyfr+p722
+bricklink.com sa.le@yac+722
 ```
 
 
