--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -613,6 +613,8 @@ Error message and password prompt
 
 <li>security</li>
 
+<li>shadowrun ideas</li>
+
 <li>shuttle pass / flying shuttle pass</li>
 
 <li>sms</li>
@@ -10136,7 +10138,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20221028134418621" list="[[code snippets (java, git, kubectl / k8s ...)]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20221028134418621" title="$:/StoryList">
+<div list="[[shadowrun ideas]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10205,8 +10207,8 @@ Home
 <div created="20210313142548541" modified="20221013085855629" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20221028135102134" title="$:/temp/search">
-<pre>rebase</pre>
+<div created="20190114084246125" modified="20221110161414555" title="$:/temp/search">
+<pre>shadowrun</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -15580,8 +15582,9 @@ Pour les aspects scientifiques de mon propos, qui le fondent et le justifient, l
 C'est en me fondant sur un puissant socle scientifique, historique, symbolique, que j'ai pu concevoir cette approche de la musculation.
 </pre>
 </div>
-<div created="20190322150105505" modified="20221010155327439" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20221107124611596" tags="improve core" title="online services, addons &amp; resources">
 <pre>! misc
+* ''git interactive tutorial'' https://learngitbranching.js.org/?locale=fr_FR
 * https://lew.la/ a collection of web tools
 * transformer en coloriage https://mimi-panda.com/coloring-page-online/
 * image editor https://pixlr.com/fr/x/#editor
@@ -16606,7 +16609,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20221010155245591" tags="core" title="pw">
+<div created="20190130144059269" modified="20221109132528962" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16751,6 +16754,7 @@ petitbambou sa.leàausyfr+p722
 bricklink.com sa.le@yac+722
 https://myr.renault.fr/ saleya+822
 lego.com osefosef+422
+boardgamegeek / rpggeek boardgamegeek.os.os@xn osefosef b2211
 ```
 
 
@@ -17755,6 +17759,148 @@ It's NOT 'Just Going To Happen!'
 * Justin Izu	https://www.youtube.com/channel/UCe-0FAoHZyDLPMLHnYAuXsw/videos
 * clé U2F		https://u2f-key.tech/fr/
 </pre>
+</div>
+<div created="20221110161421302" modified="20221110164513145" tags="idea jeux" title="shadowrun ideas">
+<pre>! rules
+!! token edge/karma/fate
+* possibilité de &quot;sacrifier&quot; 1 (n?) token/point pour limiter les dégâts
+** mise en gage des points au début du combat ? du tour ?
+*** points de karma-pool ?
+**** checks réguliers de chance utilisant les dés restants
+!! idées dés
+* feats ou conditions permettant de reroll N dés
+* un MAX sur un dé permet le roll d'un dé bonus
+** limité à certains types de dés ?
+** types de dés:
+*** attribut					vert	
+*** compétence				rouge
+*** pool
+*** équipement &gt; 1 = defect	NOIR / JAUNE
+*** magie						BLEU / BLANC
+*** dé bonus de MAX sur un autre dé (ne peut pas donner de dé bonus lui-même, ni de crit fail)
+!! règles++:
+* différencier une diff 6 et une diff 7:
+** si diff =&lt;6, chaque 6 donne droit à 1D de + : possibilité de faire + de succès que le nb de dés lancés
+** si diff &gt;=7, fonctionnement normal
+* permettre un roll PNJ &quot;de masse&quot; (initiative, perception, détection, ...)
+* attribut MAGIE démarre à 1 (peut y avoir des mages noobs)
+** anyone can become magically active ?
+* skillwire:
+** only specializations chips ?
+** encephalon = dice pool available for skillwire ?
+!! idées vrac
+* no-hp:
+** &quot;anti-feats&quot; : estropié, ralenti, shaking, hémorragie...
+* horreur: hallucinations tactiles, odorantes, auditives
+** brain-chip inducing hallucinations
+
+! idées personnages
+* &quot;paradogs&quot; paradox paranormal dog
+* buggy cyberware (not retracting razorblades, ...)
+* pj ghoul + cyber-eyes
+
+! scénar
+primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les transformer en goules &amp; toucher les primes
+
+! character concepts / typologies de personnages:
+!! concepts
+* Swiss - a Jack of all trades)
+* Smoke - A Troll Magician focused on illusion spells and summoning fire elementals when things get rough. He either turns into smoke or turns his enemies into smoke.
+* Charly Felini
+** adepte chaman chat
+** moustaches àla dalli
+* mad scientist / chemist
+** drug addict
+** pistolet à fléchettes
+** cyber-nails injecteurs
+* fake hémiplégique (can actually get up &amp; run) (through a cyber switch so the act is perfect ?)
+* illusionist among mirrors
+** mirror image
+** invisibility
+** morphing into pet + has 2 para-animals pets (snakes, helldog, ...)
+* &quot;paradogs&quot; &gt; dog chaman dresseur de helldogs / &quot;wherewolf&quot; wolf chaman dresseur de loups ?
+* smoke grenade + thermal vision ?
+* hémiplégique + lévitation
+* low-grade mage + demolition expertise
+** can trigger his explosives with magic remote ignition
+** can dispatch his explosives with telekinesis
+* adept shaman (limited to spells of his totem)
+* adept mage (no astral)
+* burnout mage / mage désabusé
+* unbeknownst shapeshifter or drake
+* cybereyed ghoul
+* wired skill user
+** biotech
+** disguise
+** interrogation
+** lockpick
+** electronic
+** weapon B/R
+** tactics ====&gt; Small UnitTactics Skill
+** hacking
+** stealth
+** dodge
+** piloting stuff
+** demolition
+** negociation
+** Mechanic
+** Chemistry
+** swimming
+!! défauts
+* muet
+* cleptomane
+* pyromane
+* grande gueule
+* amnesia
+* asthma
+* drug addict
+* cybered mage
+* buggy cyberware (on crit fail)
+
+! grosbill
+* snake shaman adept (3 schools of magic)
+* shapeshifter + assorted pets + illusions
+* paraplegic decker/rigger
+* Perception.Visual Sneaking.Urban Automatics.Machine Pistols
+
+! skillwire
+* chipjack &gt; skillsofts &amp; datasofts
+* headware:datasoft link &gt; knowsofts
+* headware:skillsofts
+* (skillsofts)
+* bodyware:skillwire &gt;
+** 1    0.1ess    10k¥
+** 2    0.2ess    20k¥
+** 3    0.3ess    30k¥
+** 4    0.8ess    400k¥
+** 5    1.0ess    500k¥
+** 6    1.2ess    600k¥
+** 7    2.1ess    7M¥
+** 8    2.4ess    8M¥
+** 9    2.7ess    9M¥
+
+! burnout mage
+My basic ware package for a magician is cerebral boosters, narco, platelet factory, datajack, and a mnemonic enhancer. Coupled with a logic tradition and Psyche, this gives a very solid drain pool for higher than Magic force spells/spirits for just one essence as well as the convenience of a datajack and solid knowledge skills.
+I also point out that an aspected d magician, even with no magical skills and has to buy Magic in play, do get some standard perks - access to mentor spirits, weapon foci, assensing, and metamagics. You can make heavily wared characters that take advantage of these perks.
+
+! inspi char concepts:
+* Singed &gt; snare, toxins, poisons
+* Blitzcrank
+* Twitch &gt; sneak, fufu, backstab, 
+* udyr &gt; swtich stances
+* twisted fate
+* brand / ignus &gt; burning mage
+* heimerdinger &gt; tourelles automatiques autonomes
+* katarina
+* kennen / ninja
+* lee sin / Chirrut Îmwe &gt; blind monk
+* nidalee &gt; leopard shape-shifter
+* oriana &gt; drone rigger
+* quinn / fauconnier &gt; pet
+* ryze &gt; immobilisation / cumulativeliy incrising damage
+* shaco / jester / le joker &gt; image miroir
+* vladmir / fiddlesticks / démoniste+soul_shards &gt; pouvoir se heal avec les marques accumulées par les hits sur les cibles
+* zilean &gt; snare / acceleration / back to state</pre>
 </div>
 <div created="20190416125524938" modified="20190418152027154" tags="coinmagic magic" title="shuttle pass / flying shuttle pass">
 <pre>&lt;&lt;&lt;
