--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -475,6 +475,8 @@ Error message and password prompt
 
 <li>isolation</li>
 
+<li>jdr enfants</li>
+
 <li>jeux à faire avec enfants</li>
 
 <li>jeux à faire/refaire</li>
@@ -10138,7 +10140,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div list="[[shadowrun ideas]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" title="$:/StoryList">
+<div created="20221118105131258" list="[[shadowrun ideas]] [[jdr enfants]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20221118105131258" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10207,8 +10209,8 @@ Home
 <div created="20210313142548541" modified="20221013085855629" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20221110161414555" title="$:/temp/search">
-<pre>shadowrun</pre>
+<div created="20190114084246125" modified="20221118105124259" title="$:/temp/search">
+<pre>shado</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -14374,6 +14376,79 @@ ctrl + alt + H</pre>
 *** PAC &quot;eau chaude&quot; 13500€ (installation comprise)
 *** PAC sans eau chaude : 11500€ (installation comprise)</pre>
 </div>
+<div created="20221118104032132" modified="20221118105014859" tags="idea kids education jeux" title="jdr enfants">
+<pre>! pas de mort: fuite ou KO
+
+! settings :
+* pirates / chasse au trésor
+* pokemon
+* ninjago
+* heart of darkness ? &gt; une éclipse fait disparaitre le chien du héros qui part à sa rescousse dans le monde des ténèbres
+
+! PNJs :
+* robots
+* licorne
+* père-noel
+* la petite souris
+* dhabus (speaks in symbols)
+
+! opponents :
+* sorcière
+* grand méchant loup
+* champignomes (hommes-champignons toxiques)
+* dinosaures
+* gros rat moche
+* ogre
+* minotaure
+* dragon
+* homme-serpent (ninjago)
+* loup
+* murlocs?
+
+! items :
+* sac sans fond
+* baguette magique
+* gants de télékinésie
+* bottes de furtivité
+* tapis volant
+* bottes de 7 lieues / de saut
+* haricot magique -&gt; corde
+* balais volant
+
+! spells :
+* téléportation
+* télékinésie
+* vol
+* sommeil &quot;faire dormir&quot;
+* invisibilité &quot;disparaitre&quot;
+* &quot;saut de géant&quot;
+
+! PJ:
+* ninjago
+* robots ?
+* Mr Chatouille : grands bras
+* Sullivan (Monster &amp; Co)
+* Bob (Monster &amp; Co)
+* Buzz (Toy Story)
+* Woody (Toy Story)
+* Aladdin
+* Miguel (Coco)
+* Hector (Coco)
+* Hannah (Reine des Neiges)
+* Elsa (Reine des Neiges)
+* Christophe (Reine des Neiges)
+* Ernest (Ernest &amp; Celestine)
+* Celestine (Ernest &amp; Celestine)
+* Diego (l'Age de Glace)
+* Sid (l'Age de Glace)
+* Manny (l'Age de Glace)
+* Scrat (l'Age de Glace)
+* Arthur (Merlin l'Enchanteur)
+* Merlin (Merlin l'Enchanteur)
+* Raiponce			&lt;&lt;
+* Rémy (Ratatouille)
+</pre>
+</div>
 <div created="20220613151334864" modified="20220613152132364" tags="education kids jeux" title="jeux à faire avec enfants">
 <pre>! SALLAFRANQUE Marie
 * strike
@@ -16609,7 +16684,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20221109132528962" tags="core" title="pw">
+<div created="20190130144059269" modified="20221117180139655" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16755,6 +16830,8 @@ bricklink.com sa.le@yac+722
 https://myr.renault.fr/ saleya+822
 lego.com osefosef+422
 boardgamegeek / rpggeek boardgamegeek.os.os@xn osefosef b2211
+drivethrurpg.com drivethrurpg.s.lexn 2111
+magictricks.io =&gt; magictricksio.o**f.o**fxn / o**fo**f / o**fo**f+1234
 ```
 
 
@@ -17760,8 +17837,48 @@ It's NOT 'Just Going To Happen!'
 * clé U2F		https://u2f-key.tech/fr/
 </pre>
 </div>
-<div created="20221110161421302" modified="20221110164513145" tags="idea jeux" title="shadowrun ideas">
-<pre>! rules
+<div created="20221110161421302" modified="20221118110543788" tags="idea jeux" title="shadowrun ideas">
+<pre>! idées personnages
+* &quot;paradogs&quot; paradox paranormal dog
+* buggy cyberware (not retracting razorblades, ...)
+* pj ghoul + cyber-eyes
+* fake-paraplegic (cyber switch to disable/enable legs + program to keep legs trained)
+
+! idées PJ pré-tirés
+* non-combat (adept) shaman
+* skillwire / decker
+* (physad?) &quot;ninja&quot; light acrobat / parkour
+
+! scénar
+primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les transformer en goules &amp; toucher les primes
+
+! decking:
+* cameras
+** disable
+** programmed disabled
+** looping footage
+* turrets &amp; drones
+** disable
+** control/pilote
+** turn against legit users (auto-control)
+* login
+**- credentials escalation
+** get true credential through bruteforce
+* alarm
+** trigger
+** disable/diffuse
+** prevent
+** diffuse reinforcement call
+* security communications
+** jam
+** send false info
+* doors
+** close
+** lock
+** unlock
+** force locked
+
+! rules
 !! token edge/karma/fate
 * possibilité de &quot;sacrifier&quot; 1 (n?) token/point pour limiter les dégâts
 ** mise en gage des points au début du combat ? du tour ?
@@ -17793,14 +17910,27 @@ It's NOT 'Just Going To Happen!'
 ** &quot;anti-feats&quot; : estropié, ralenti, shaking, hémorragie...
 * horreur: hallucinations tactiles, odorantes, auditives
 ** brain-chip inducing hallucinations
-
-! idées personnages
-* &quot;paradogs&quot; paradox paranormal dog
-* buggy cyberware (not retracting razorblades, ...)
-* pj ghoul + cyber-eyes
-
-! scénar
-primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les transformer en goules &amp; toucher les primes
+!! esquive
+* chaque esquive supplémentaire réduit le pool de dés de l'esquive suivante
+** possibilité de limiter l'esquive (&quot;ne pas esquiver&quot;) pour une attaque jugée suffisamment inoffensive, pour ne pas souffrir de la pénalité sur l'esquive suivante
+* Gymnastics-for-Dodge
+* rafale: chaque nv de rafale augmente en incrémental le nv de difficulté
+!! rafale
+* chaque nv de rafale augmente en incrémental le nv de difficulté
+* augmente la difficulté pour esquiver
+* augmente la difficulté du prochain tir !!!
+* augmente les chances de toucher &gt; nb dés ++
+* trop de balles = devient de + en + dur de toucher
+!! rolls parameters:
+* &quot;largeur&quot;= nb successes
+* &quot;hauteur&quot;= max success value
+* incremental difficulty (rafale, security breaching...)
+* re-roll: N successes
+* ignore/suppress: N successes
+* re-roll: N failures
+* ignore/suppress: N 1s
+* incremental opposition roll: hidden difficulty
+* hidden difficulty (perception, stealth, decking...)
 
 ! character concepts / typologies de personnages:
 !! concepts
@@ -17885,22 +18015,25 @@ I also point out that an aspected d magician, even with no magical skills and ha
 
 ! inspi char concepts:
 * Singed &gt; snare, toxins, poisons
-* Blitzcrank
+* Blitzcrank / MK Scorpion &gt; grappin
 * Twitch &gt; sneak, fufu, backstab, 
 * udyr &gt; swtich stances
 * twisted fate
-* brand / ignus &gt; burning mage
+* ''brand / ignus &gt; burning mage''
 * heimerdinger &gt; tourelles automatiques autonomes
 * katarina
 * kennen / ninja
-* lee sin / Chirrut Îmwe &gt; blind monk
+* lee sin / Chirrut Îmwe &gt; blind monk contact fighter
 * nidalee &gt; leopard shape-shifter
 * oriana &gt; drone rigger
 * quinn / fauconnier &gt; pet
 * ryze &gt; immobilisation / cumulativeliy incrising damage
 * shaco / jester / le joker &gt; image miroir
 * vladmir / fiddlesticks / démoniste+soul_shards &gt; pouvoir se heal avec les marques accumulées par les hits sur les cibles
-* zilean &gt; snare / acceleration / back to state</pre>
+* zilean &gt; snare / acceleration / back to state
+* Mordekaizer
+* ''Vhailor / Alphonse Elric &gt; empty animated armor &gt; free spirit''
+* ''Dak'kon katana wielding contact mage''</pre>
 </div>
 <div created="20190416125524938" modified="20190418152027154" tags="coinmagic magic" title="shuttle pass / flying shuttle pass">
 <pre>&lt;&lt;&lt;
